# hellofoocppservice

./: CMakeLists.txt  LICENSE  README.md  hellofoocppservice.cpp  stringcleaner.cpp  stringcleaner.hpp  test_stringcleaner.cpp
